  smarty's cached and compiled templates. [Martin]
+ App.php now supports direct linking. [Thom]
+ Implemented a search feature for the atk File editor class. You're now able
  to search on filenames. [Martin]
+ Added extraparams in atkTreeNode for putting extra params in the url when 
  expanding/collapsing [Wouter]
+ Added $modulefallback param to atktext, use this for a single text call or 
  set $config_language_module_fallbak to true for all calls to search all the
   modules for a string. [Boy]
+ Added $config_corporate_node_base and $config_corporate_module_base for 
  defining application wide custom baseclasses for nodes and modules. [Ivo]
+ Added atkConfig::get() for retrieving config values by section. Variables
  can be defined as $config["value"] in configs/<section>.inc.php files. [Ivo]
+ $config values can now be redirected to a runtime function by defining
  a function called config_<configkey>() or config_<modname>_<configkey>() for
  modules. [Ivo]
+ Added debug console for debugging queries. Shows explain plan, results and
  backtrace for each query performed on a page (mysql only currently). 
  If debuglevel is 2, a stacktrace of each debug statement is shown. [Ivo]
+ Debug output now includes memory usage information and elapsed time between
  two atkdebug calls. [Ivo]
+ Added setWidth() and getWidth() function to atkListAttribute to set the
  width of dropdown list in pixels. [Boy]
+ Added search support to atkAggregatedColumn. (bug #480, #512) [Yury]
+ atkDateAttribute now accepts a day/month/year array as min/max. [Sandy]
+ Added ability to set the maximum amount of years for the year dropdown field
  of the atkDateAttribute. [Boy]
+ Added preliminary MS SQL database driver (test version). [Harrie]
+ Added setHideWhenEmpty() method to atkManyToOneRelation. [Ivo]
+ Added renderbox attribute (boolean, set to true by default) to function
  action_view. This enables you to optionally turn off the rendering of a box