@@ -62,8 +62,8 @@ Changes in ATK 5.3
 + Added extraparams in atkTreeNode for putting extra params in the url when 
   expanding/collapsing [Wouter]
 + Added $modulefallback param to atktext, use this for a single text call or 
-  set $config_language_module_fallbak to true for all calls to search all the
-   modules for a string. [Boy]
+  set $config_language_module_fallback to true for all calls to search all the
+  modules for a string. [Boy]
 + Added $config_corporate_node_base and $config_corporate_module_base for 
   defining application wide custom baseclasses for nodes and modules. [Ivo]
 + Added atkConfig::get() for retrieving config values by section. Variables
@@ -132,6 +132,7 @@ Changes in ATK 5.3
   check, causing the test to fail on Oracle installs. [Ivo]
 * Changed atkLanguage stringid fallback module_node_stringid is now the most
   important, followed by node_stringid and finally stringid. [Boy]
+* Improved fallbackmechanism of atkLanguage. [Ivo]
 * Fixed atkUIs title() function as it failed to translate the module name
   properly. [Boy]
 * Removed unnecessary br's from edit() of atkOneToManyRelation. [Boy]
@@ -212,6 +213,8 @@ Changes in ATK 5.3
   not be used. [Ivo]
 - Removed $g_db. Db connections should be retrieved using &atkGetDb() or
   &atkDb::getInstance(). [Ivo]
+- deprecated $config_language_debugging, as it no longer has any perceived
+  value. [Ivo]
 
 Changes in ATK 5.2.1
 --------------------
